# computer-vision-triton-cpp-client

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  Triton.hpp  Yolo.hpp  YoloInterface.hpp  YoloNas.hpp  client.cpp  common.hpp  docker-compose.yml  example_docker_client_run.sh  example_docker_client_run_debug.sh  example_docker_client_run_optical_flow.sh  example_docker_run.sh  example_docker_run_tests.sh  run_tests.sh  run_tests_docker.sh
.devcontainer/: devcontainer.json
config/environments/: sample_config.txt
deploy/classifier/tensorflow/: requirements.txt
deploy/classifier/torchvision/: requirements.txt
deploy/classifier/vit/: requirements.txt
deploy/classifier/vit/docker/: setup_environment.sh
deploy/classifier/vit/onnx/: deploy.py  export.py
deploy/classifier/vit/python_pipeline/: deploy.py
deploy/classifier/vit/python_standard/: deploy.py
docs/: Classification.md  Docker_development.md  Docker_improvements.md  InstanceSegmentation.md  ObjectDetection.md  OpticalFlow.md  UNIT_TESTING.md
docs/guides/: Classification.md  Docker_setup.md  ObjectDetection.md  OpticalFlow.md  TensorflowClassification.md  TorchvisionClassification.md  ViTClassification.md
include/: Config.hpp  ConfigManager.hpp  IFileSystem.hpp  ITritonClient.hpp  Logger.hpp  TaskInterface.hpp  TritonClientAdapter.hpp  ViTClassifier.hpp  common.hpp
scripts/: docker_triton_run.sh
scripts/classifier/: export_classifier.py  export_tf_saved_model_classifier.py  requirements.txt
scripts/docker/: docker_triton_run.sh  extract_triton_libs.sh  run_client.sh  run_debug.sh  run_optical_flow.sh  run_tests.sh  run_vit_classifier.sh
scripts/optical_flow/: raft_exporter.py  raft_exporter.sh  requirements.txt
scripts/setup/: docker_setup.sh  pre_commit_setup.sh
src/: Triton.hpp
src/main/: client.cpp
src/tasks/: ViTClassifier.cpp  task_factory.cpp  task_factory.hpp
src/tasks/classification/src/: TensorflowClassifier.cpp  TensorflowClassifier.hpp  TorchvisionClassifier.cpp  TorchvisionClassifier.hpp  ViTClassifier.cpp
src/tasks/instance_segmentation/src/: YOLOSeg.cpp  YOLOSeg.hpp
src/tasks/object_detection/include/: DetectorInterface.hpp
src/tasks/object_detection/src/: DFine.cpp  DFine.hpp  RFDetr.cpp  RFDetr.hpp  RTDetr.cpp  RTDetr.hpp  RTDetrUltralytics.cpp  RTDetrUltralytics.hpp  YOLO.cpp  YOLO.hpp  YOLOv10.cpp  YOLOv10.hpp  YOLOv7_NMS.hpp  Yolo.cpp  Yolo.hpp  YoloNas.cpp  YoloNas.hpp
src/tasks/optical_flow/src/: RAFT.cpp  RAFT.hpp
src/triton/: ITriton.hpp  Triton.cpp  Triton.hpp  TritonModelInfo.hpp
src/utils/: ConfigManager.cpp  FileSystem.cpp  Logger.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_config.cpp  test_config_basic.cpp  test_config_manager.cpp  test_config_manager_basic.cpp  test_integration.cpp  test_logger.cpp  test_main.cpp  test_task_factory.cpp  test_task_interface.cpp  test_triton.cpp  test_yolo.cpp
tests/mocks/: MockFileSystem.hpp  MockTriton.hpp  MockTritonClient.hpp
